Updated required changes & added few utils class

--- a/test-output/ExtentReport.html
+++ b/test-output/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Login Tests</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 21, 2025 12:46:42 am</span></a>
+<a href="#"><span class="badge badge-primary">May 21, 2025 11:30:32 pm</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">Successful login with valid credentials</p>
             <p class="text-sm">
-              <span>12:46:42 am</span> / <span>00:01:07:711</span>
+              <span>11:30:32 pm</span> / <span>00:00:14:350</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Successful login with valid credentials</h5>
-<span class='badge badge-success'>05.21.2025 12:46:42 am</span>
-<span class='badge badge-danger'>05.21.2025 12:47:50 am</span>
-<span class='badge badge-default'>00:01:07:711</span>
+<span class='badge badge-success'>05.21.2025 11:30:32 pm</span>
+<span class='badge badge-danger'>05.21.2025 11:30:47 pm</span>
+<span class='badge badge-default'>00:00:14:350</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,49 +105,49 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>12:47:48 am</td>
+        <td>11:30:44 pm</td>
         <td>
           User navigated to the login page
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:47:48 am</td>
+        <td>11:30:44 pm</td>
         <td>
           Step passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>12:47:49 am</td>
+        <td>11:30:44 pm</td>
         <td>
-          User entered valid username: Admin and password: admin123
+          User entered username: Admin and password: admin123
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:47:49 am</td>
-        <td>
-          Step passed
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:47:49 am</td>
+        <td>11:30:44 pm</td>
         <td>
           Step passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:47:50 am</td>
+        <td>11:30:46 pm</td>
+        <td>
+          Step passed
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>11:30:47 pm</td>
         <td>
           User successfully navigated to the dashboard
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:47:50 am</td>
+        <td>11:30:47 pm</td>
         <td>
           Step passed
         </td>
@@ -164,7 +164,7 @@
           <div class="test-detail">
             <p class="name">Successful login with valid credentials</p>
             <p class="text-sm">
-              <span>12:47:51 am</span> / <span>00:00:47:370</span>
+              <span>11:30:48 pm</span> / <span>00:00:15:181</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -173,9 +173,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Successful login with valid credentials</h5>
-<span class='badge badge-success'>05.21.2025 12:47:51 am</span>
-<span class='badge badge-danger'>05.21.2025 12:48:39 am</span>
-<span class='badge badge-default'>00:00:47:370</span>
+<span class='badge badge-success'>05.21.2025 11:30:48 pm</span>
+<span class='badge badge-danger'>05.21.2025 11:31:03 pm</span>
+<span class='badge badge-default'>00:00:15:181</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -188,49 +188,49 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>12:48:37 am</td>
+        <td>11:31:00 pm</td>
         <td>
           User navigated to the login page
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:48:37 am</td>
+        <td>11:31:00 pm</td>
         <td>
           Step passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>12:48:37 am</td>
+        <td>11:31:00 pm</td>
         <td>
-          User entered valid username: admin and password: admin123
+          User entered username: admin and password: admin123
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:48:37 am</td>
-        <td>
-          Step passed
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:48:37 am</td>
+        <td>11:31:00 pm</td>
         <td>
           Step passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:48:39 am</td>
+        <td>11:31:00 pm</td>
+        <td>
+          Step passed
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>11:31:03 pm</td>
         <td>
           User successfully navigated to the dashboard
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:48:39 am</td>
+        <td>11:31:03 pm</td>
         <td>
           Step passed
         </td>
@@ -247,7 +247,7 @@
           <div class="test-detail">
             <p class="name">Login fails with invalid credentials</p>
             <p class="text-sm">
-              <span>12:48:39 am</span> / <span>00:00:43:760</span>
+              <span>11:31:03 pm</span> / <span>00:00:09:348</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -256,9 +256,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Login fails with invalid credentials</h5>
-<span class='badge badge-success'>05.21.2025 12:48:39 am</span>
-<span class='badge badge-danger'>05.21.2025 12:49:23 am</span>
-<span class='badge badge-default'>00:00:43:760</span>
+<span class='badge badge-success'>05.21.2025 11:31:03 pm</span>
+<span class='badge badge-danger'>05.21.2025 11:31:13 pm</span>
+<span class='badge badge-default'>00:00:09:348</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -271,49 +271,49 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>12:49:19 am</td>
+        <td>11:31:10 pm</td>
         <td>
           User navigated to the login page
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:49:19 am</td>
+        <td>11:31:10 pm</td>
         <td>
           Step passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>12:49:20 am</td>
+        <td>11:31:10 pm</td>
         <td>
-          User entered valid username: Admin and password: wrongpass
+          User entered username: Admin and password: wrongpass
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:49:20 am</td>
+        <td>11:31:10 pm</td>
         <td>
           Step passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:49:20 am</td>
+        <td>11:31:10 pm</td>
         <td>
           Step passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>12:49:23 am</td>
+        <td>11:31:12 pm</td>
         <td>
           Error message was displayed for invalid login attempt
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:49:23 am</td>
+        <td>11:31:13 pm</td>
         <td>
           Step passed
         </td>
@@ -330,7 +330,7 @@
           <div class="test-detail">
             <p class="name">Login fails with invalid credentials</p>
             <p class="text-sm">
-              <span>12:49:23 am</span> / <span>00:00:34:234</span>
+              <span>11:31:13 pm</span> / <span>00:00:11:135</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -339,9 +339,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Login fails with invalid credentials</h5>
-<span class='badge badge-success'>05.21.2025 12:49:23 am</span>
-<span class='badge badge-danger'>05.21.2025 12:49:57 am</span>
-<span class='badge badge-default'>00:00:34:234</span>
+<span class='badge badge-success'>05.21.2025 11:31:13 pm</span>
+<span class='badge badge-danger'>05.21.2025 11:31:24 pm</span>
+<span class='badge badge-default'>00:00:11:135</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -354,49 +354,49 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>12:49:54 am</td>
+        <td>11:31:21 pm</td>
         <td>
           User navigated to the login page
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:49:54 am</td>
+        <td>11:31:21 pm</td>
         <td>
           Step passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>12:49:54 am</td>
+        <td>11:31:22 pm</td>
         <td>
-          User entered valid username: wronguser and password: admin123
+          User entered username: wronguser and password: admin123
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:49:54 am</td>
+        <td>11:31:22 pm</td>
         <td>
           Step passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:49:55 am</td>
+        <td>11:31:22 pm</td>
         <td>
           Step passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>12:49:57 am</td>
+        <td>11:31:24 pm</td>
         <td>
           Error message was displayed for invalid login attempt
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:49:57 am</td>
+        <td>11:31:24 pm</td>
         <td>
           Step passed
         </td>
@@ -420,13 +420,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 21, 2025 12:46:42 am</h3>
+<h3>May 21, 2025 11:30:32 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 21, 2025 12:49:58 am</h3>
+<h3>May 21, 2025 11:31:24 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -496,7 +496,7 @@
 </div></div>
 <script>
 var timeline = {
-"Successful login with valid credentials":67.711,"Successful login with valid credentials":47.37,"Login fails with invalid credentials":43.76,"Login fails with invalid credentials":34.234
+"Successful login with valid credentials":14.35,"Successful login with valid credentials":15.181,"Login fails with invalid credentials":9.348,"Login fails with invalid credentials":11.135
 };
 </script>
 <div class="row">
